# haskell-template

./: haskell-template.cabal
